[project]
name = "l22-hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "uvicorn>=0.41.0",
]
